--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ to install: `devtools::install_github("tombeesley/eyetools")`
 
 It is free to use under the GNU General Public Licence..
 
-Vague "roadmap" for functions:
+"Roadmap" for functions:
 
 |order | process | implemented function(s) | comment
 |-|-|-|-|
@@ -32,7 +32,7 @@ Vague "roadmap" for functions:
 |6.| Visualisations - heatmaps, fixation plots, etc  | `spatial_plot()` | provides a 2D plot of raw data and fixations |
 |7.| Saccade detection  | `VTI_saccade()` | Working in basic form - provides summary of velocity, start/end, duration, etc |
 |8.| velocity-based fixations | | |
-|9.| scan paths (OG to be prodded fiercely)  | | |
+|9.| scan paths?  | | |
 
 ## How to use eyetools (work in progress)
 
@@ -99,27 +99,20 @@ ggplot() +
 ```
 
 **Processing fixations**
-...
+The function `fix_dispersion` is a dispersion-based algorithm for identifying fixations, based on the algorithm described in Salvucci and Goldberg (2000). Passing raw data to this will return a tibble that contains the 
+
+```{r}
+
+raw_data_f <- filter(raw_data, trial <= 3) # get a sample of trials
+
+fix_dispersion(raw_data_f)
+
+```
+
 
 **Assessing time on areas of interest**
 ...
 
 **Plotting data**
 ...
-
-
-*update notes:*
-
-09/06/2022 - `VTI_saccade()` algorithm is working in a basic form
-
-30/05/2022 - `combine_eyes()` added. Saccade algorithm work has started and needs checking
-
-08/02/2021 - `AOI_time()` added. Provides basic results using fixation data as input.
-
-17/09/2020 - `fix_dispersion()` and `spatial_plot()` added. Almost useful...
-
-19/08/2020 - `interpolate()` seems to work. 
-
-17/08/2020 - it doesn't do ANYTHING at the moment. Don't even think about using it.
-
 
