--- a/README.Rmd
+++ b/README.Rmd
@@ -137,7 +137,7 @@ The function `AOI_time()` can be used to calculate the time spent on areas of in
 ```{r}
 
 AOI_regions <- data.frame(matrix(nrow = 3, ncol = 4))
-colnames(AOI_regions) <- c("x", "y", "width", "height")
+colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
 
 AOI_regions[1,] <- c(960, 540, 300, 300) # X, Y, W, H - square
 AOI_regions[2,] <- c(200, 540, 300, 300) # X, Y, W, H - square
@@ -171,14 +171,14 @@ spatial_plot(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
 
 ```
 
-circle AOIs?
+We can also define AOIs as circles by specifying the radius in the 3rd column and setting the 4th column to NA:
 
 ```{r}
 
 AOI_regions <- data.frame(matrix(nrow = 3, ncol = 4))
-colnames(AOI_regions) <- c("x", "y", "width", "height")
+colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
 
-AOI_regions[1,] <- c(960, 540, 300, NA) # X, Y, W, H - square
+AOI_regions[1,] <- c(960, 540, 150, NA) # X, Y, R - circle
 AOI_regions[2,] <- c(200, 540, 300, 300) # X, Y, W, H - square
 AOI_regions[3,] <- c(1720, 540, 300, 300) # X, Y, W, H - square
 
@@ -187,11 +187,32 @@ t_raw <- filter(example_raw_sac, between(trial,1,10))
 # process fixations
 t_fix <- fix_dispersion(t_raw, disp_tol = 100, min_dur = 150)
 
-AOI_time(t_fix, AOIs = AOI_regions)
-
 spatial_plot(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
 
 ```
+
+Circular AOIs are also handled by AOI_time and will produce different results to comparable rectangular AOIs. Here fixation 5 falls outside of the circular AOI, but within the region of the rectangular AOI:
+
+```{r}
+
+AOI_regions <- data.frame(matrix(nrow = 2, ncol = 4))
+colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
+
+AOI_regions[1,] <- c(960, 540, 150, NA) # X, Y, R - circle in centre
+AOI_regions[2,] <- c(960, 540, 300, 300) # X, Y, W, H - square in centre
+
+t_raw <- filter(example_raw_sac, trial == 13)
+
+# process fixations
+t_fix <- fix_dispersion(t_raw, disp_tol = 100, min_dur = 150)
+
+spatial_plot(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
+
+AOI_time(t_fix, AOIs = AOI_regions)
+
+
+```
+
 
 
 **Processing saccades**
