--- a/vignettes/package_workflow.Rmd
+++ b/vignettes/package_workflow.Rmd
@@ -10,9 +10,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Steps
 
-1.  Make changes to package components (scripts, data, etc)
-2.  Use **`load_all()`** to make the updates available for use.
-3.  Use **`document()`** to update the function documentation and NAMESPACE
-4.  Use `check()` to make sure there are no errors, correct any warnings, etc.
-5.  When happy the package is robust, use `install()` to provide access outside of development project.
+1. Make a branch from the master 
+2. Make changes to package components (scripts, data, etc)
+3.  Use **`load_all()`** to make the updates available for use.
+4.  Use **`document()`** to update the function documentation and NAMESPACE
+5.  Use `check()` to make sure there are no errors, correct any warnings, etc.
 6. Commit to github. 
