--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,11 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+<!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+<!-- badges: end -->
+
+
 # **eyetools**
 
 ## A set of tools for eye data processing, analysis and visualisation in R
