--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ theme_set(theme_light())
 ### Installation
 
 You can install eyetools using the following code:
-```{r eval=FALSE}
+```{r, eval=FALSE}
 if (!require(devtools)) {
   install.packages("devtools")
   library(devtools)
