--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,9 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      fig.path = "man/figures/")
+
 ```
 
 <!-- badges: start -->
