--- a/vignettes/eyetools.Rmd
+++ b/vignettes/eyetools.Rmd
@@ -1,5 +1,11 @@
 ---
-output: github_document
+title: "An introduction to eyetools"
+author: "Tom Beesley, Matthew Ivory"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{An introduction to eyetools}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 
@@ -13,7 +19,5 @@ knitr::opts_chunk$set(echo = TRUE,
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-
-# **Introduction to eyetools**
 
 Here is where we can have a more detailed tutorial for going from raw data (or data in appropriate form) to the end result. This may be a good one to wait until the end of additional functions so that it can be written to include all
